@@ -1,5 +1,6 @@
 0.0.7 (in development)
 ------------------------------------------------------------------------
+- Improved: [#5137]: Removing all guests no longer closes the rides and removes the vehicles.
 
 0.0.6 (2017-01-29)
 ------------------------------------------------------------------------
